fixed the overflow in the admin dashboard

--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ nav[role="navigation"] ul li ul li {
 
 main[role="dashboard"] {
   position: absolute;
-  top: 54px;
+  top: 47px;
   width: 100vw;
   z-index: -2;
   color: #333;
